# IPC_FIFO

./: CMakeLists.txt  fd.cpp  fd.h  rdr.cpp  wrt.cpp
